-
Bug
-
Resolution: Done
-
P1: Critical
-
5.6.2, 5.8.0, 5.9.0
-
None
-
-
0adc14d8dbdd9e28ccb72c49d865009dd8df1b1c
As mentionend in the blog article (http://blog.qt.io/blog/2017/05/24/qt-creator-4-3-0-released/#comment-1199732) the newest Qt Creator is not usable on mac OS.
Scrolling/Typing and Intellisense is very slow.
Is is not possible to work with it.
- relates to
-
QTCREATORBUG-18186 Text editor sluggish on macOS with Retina after Qt 5.8 update
-
- Closed
-
- replaces
-
QTCREATORBUG-18401 Scrolling inside a file is laggy
-
- Closed
-
For Gerrit Dashboard: QTBUG-61384 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
197221,2 | Work around slow painting on macOS | 4.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
203777,3 | Add QWidget::acceleratedCompositing | dev | qt/qtbase | Status: DEFERRED | 0 | 0 |
204457,2 | macOS: Don’t color convert the backing store | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |
204466,2 | macOS: Don’t color convert the backing store | 5.10 | qt/qtbase | Status: MERGED | +2 | 0 |